[package]
name = "om-ict1"
version = "0.1.0"
authors = ["Tokarev Artyom <tokarev28.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
om-bis = { path = "../om-bis", version = "*" }
om-pl = { path = "../om-pl", version = "*" }
om-nt = { path = "../om-nt", version = "*" }
